[tool.poetry]
name = "est5507"
version = "0.1.0"
description = "Code for EST5507 (Regression models) assignments."
authors = ["Mateus Otto <mateus.potto@usp.br>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
